tasks implemented, core mutation 100%
