# apidefinition/openapi/openapi.yaml
@@ -12,12 +12,59 @@ tags:
   - name: meeting
 
 paths:
+  /private/meeting/findbytime/{datetime}:
+    get:
+      tags:
+        - MeetingReservation
+      summary: Returns meeting reservation by datetime
+      operationId: findByDateTime
+      parameters:
+        - name: datetime
+          in: path
+          description: search parameter in format yy.MM.dd hh:mm
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Response when meeting is reserved successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MeetingReservationDto"
+        "4XX":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorDto"
+        "5XX":
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorDto"
+
+  /private/meeting/listall:
+    get:
+      tags:
+        - MeetingReservation
+      summary: List all meetings
+      operationId: listAll
+      responses:
+        "200":
+          description: Response when meeting is reserved successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MeetingListDto"
+
   /private/meeting/reservation:
     post:
       tags:
-        - meeting reservation
+        - MeetingReservation
       summary: Post meeting reservation data
-      operationId: postMeetingReservation
+      operationId: createReservation
       requestBody:
         required: true
         content:
@@ -30,7 +77,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/MeetingReservationResponseDto"
+                $ref: "#/components/schemas/MeetingReservationDto"
         "4XX":
           description: Bad request
           content:
@@ -46,6 +93,24 @@ paths:
 
 components:
   schemas:
+    MeetingListDto:
+      type: array
+      items:
+        $ref: "#/components/schemas/MeetingReservationDto"
+
+    MeetingReservationDto:
+      type: object
+      properties:
+        day:
+          type: string
+          format: date
+        start:
+          type: string
+        end:
+          type: string
+        user:
+          type: string
+
     MeetingReservationRequestDto:
       type: object
       required:
@@ -78,16 +143,14 @@ components:
           minimum: 0
           maximum: 59
           description: "starting minute of meeting, must be 0 or 30"
+          example: 30
         endMin:
           type: integer
           minimum: 0
           maximum: 59
           description: "ending minute of meeting, must be 0 or 30"
-    MeetingReservationResponseDto:
-      type: object
-      properties:
-        status:
-          type: string
+          example: 0
+
     ErrorDto:
       type: object
       properties:
